--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,2 @@
 rootProject.name = 'jvm-java'
-include 'core', 'test-gwt', 'test-jtransc'
+include 'core', 'test-gwt', 'test-jtransc', 'support-desktop', 'support-libgdx'
