--- a/test-gwt/build.gradle
+++ b/test-gwt/build.gradle
@@ -1,5 +1,10 @@
 apply plugin: "java"
-apply plugin: "jetty"
+apply plugin: 'org.akhikhl.gretty'
+
+import org.wisepersist.gradle.plugins.gwt.GwtSuperDev
+
+def HttpFileServer server = null
+def httpfilePort = 9090
 
 gwt {
     gwtVersion='2.8.0' // Should match the gwt version used for building the gwt backend
@@ -17,15 +22,39 @@ gwt {
     }
 }
 
+/*
 task draftRun(type: JettyRunWar) {
     dependsOn draftWar
     dependsOn.remove('war')
     webApp=draftWar.archivePath
     daemon=true
 }
+*/
 
-task superDev(type: de.richsource.gradle.plugins.gwt.GwtSuperDev) {
-    dependsOn draftRun
+task startHttpServer() {
+    dependsOn draftCompileGwt
+
+    String output = project.buildDir.path + "/gwt/draftOut";
+
+    doLast {
+        copy {
+            from "webapp"
+            into output
+        }
+
+        copy {
+            from "war"
+            into output
+        }
+
+        server = new SimpleHttpFileServerFactory().start(new File(output), httpfilePort)
+
+        println "Server started in directory " + server.getContentRoot() + ", port " + server.getPort()
+    }
+}
+
+task superDev(type: GwtSuperDev) {
+    dependsOn startHttpServer
     doFirst {
         gwt.modules = gwt.devModules
     }
@@ -49,16 +78,21 @@ task dist(dependsOn: [clean, compileGwt]) {
     }
 }
 
+/*
 draftWar {
    from "war"
 }
+*/
 
-task addSource << {
+task addSource {
+    doLast {
         sourceSets.main.compileClasspath += files(project(':core').sourceSets.main.allJava.srcDirs)
+    }
 }
 
 tasks.compileGwt.dependsOn(addSource)
 tasks.draftCompileGwt.dependsOn(addSource)
+tasks.checkGwt.dependsOn(addSource)
 
 sourceCompatibility = 1.6
 sourceSets.main.java.srcDirs = [ "src/" ]
