--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,6 +32,14 @@ jobs:
           - v1-dependencies-
 
       - run: sudo apt-get update
+      # Enable HTTPS for apt.
+      - run: sudo apt-get update
+      - run: sudo apt-get install apt-transport-https
+      # Get the Google Linux package signing key.
+      - run: sudo sh -c 'curl https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key add -'
+      # Set up the location of the stable repository.
+      - run: sudo sh -c 'curl https://storage.googleapis.com/download.dartlang.org/linux/debian/dart_stable.list > /etc/apt/sources.list.d/dart_stable.list'
+      - run: sudo apt-get update
       - run: sudo apt-get install dart g++ nodejs-legacy cmake
       - run: gradle dependencies
 
