--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,8 +40,7 @@ jobs:
       # Set up the location of the stable repository.
       - run: sudo sh -c 'curl https://storage.googleapis.com/download.dartlang.org/linux/debian/dart_stable.list > /etc/apt/sources.list.d/dart_stable.list'
       - run: sudo apt-get update
-      - run: sudo apt-get install dart g++ nodejs-legacy cmake automake
-      - run: gradle dependencies
+      - run: sudo apt-get install dart g++ nodejs-legacy cmake automake libtool
 
       - save_cache:
           paths:
