--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,7 +51,7 @@ jobs:
           key: v1-dependencies-{{ checksum "build.gradle" }}
         
       # run tests!
-      - run: gradle test test-gwt:checkGwt test-jtransc:runCpp test-jtransc:runDart test-jtransc:runHaxecpp test-jtransc:runHaxeJs
+      - run: gradle test test-gwt:checkGwt test-jtransc:runCpp test-jtransc:runDart
       - run:
           name: Save test results 
           command: |
