--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,7 @@ allprojects{
 }
 
 project(":core"){
+	apply from: '../includeCommon.gradle'
     apply plugin: 'java'
     dependencies {
         testCompile "junit:junit:$junitVersion"
@@ -41,6 +42,7 @@ project(":core"){
 }
 
 project(":support-desktop"){
+	apply from: '../includeCommon.gradle'
     apply plugin: 'java'
     dependencies {
         compile project(":core")
@@ -48,6 +50,7 @@ project(":support-desktop"){
 }
 
 project(":support-libgdx"){
+	apply from: '../includeCommon.gradle'
     apply plugin: 'java'
     dependencies {
         compile project(":core")
