Use wrapper instead of direct `gradle` command

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,7 +43,7 @@ jobs:
       - run: sudo apt-get install dart g++ nodejs cmake automake libtool pkg-config
 
       # run tests!
-      - run: gradle check test-gwt:checkGwt test-jtransc:runCpp test-jtransc:runDart
+      - run: ./gradlew check test-gwt:checkGwt test-jtransc:runCpp test-jtransc:runDart
       - run:
           name: Save test results 
           command: |
