Fix coverage incomplete problem due to multi-thread programming & wired project structure

--- a/core/build.gradle
+++ b/core/build.gradle
@@ -7,6 +7,7 @@ import java.nio.file.SimpleFileVisitor
 import java.nio.file.attribute.BasicFileAttributes
 
 sourceCompatibility = '1.7'
+sourceSets.main.java.srcDirs = [ "src/main/java/" ]
 [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
 
 task compileClassInResources() {
