--- a/build.gradle
+++ b/build.gradle
@@ -83,6 +83,7 @@ project(":test-desktop") {
     apply from: '../includeCommon.gradle'
     apply plugin: 'java'
     dependencies {
+        compile project(":core") // for including coverage
         compile project(":support-desktop")
         compile project(":test-main")
         compile "com.badlogicgames.gdx:gdx-backend-headless:$gdxVersion"
